Conflict Resolution using Sync, Accept Mine and Accept Theirs fixed.